--- a/КПО_1/App.config
+++ b/КПО_1/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="MyDBConnection" connectionString="Data Source=WIN-H4QM4P27NS1\SQLEXPRESS;Initial Catalog=Car_insurance;Integrated Security=True;" />
+		<add name="MyDBConnection" connectionString="Data Source=BOSSNIGGER\SQLEXPRESS;Initial Catalog=Car_insurance;Integrated Security=True;" />
 	</connectionStrings>
 </configuration>
